# bible

./: .gitattributes  .gitignore  CNAME  README.md  deploy.sh  index.html  privacy  sermon_taxonomy_paths.txt  vercel.json
.claude/: launch.json
_rag/: README.md  pyproject.toml
_rag/index/: faiss.index  metadata.jsonl
_rag/rag/: __main__.py  api.py  build_index.py  chunk.py  config.py  corpus.py  embedder.py  index.py  models.py  retrieve.py
_rag/scripts/: serve_api.sh
_speaker_isolation/: README.md  pyproject.toml
_speaker_isolation/speaker_isolation/: __main__.py  capture.py  config.py  labels.py  models.py  segmenter.py  state.py  stitch.py  synth.py  vad.py
api/: search.py
assets/: index-3_-S4oDj.js  index-BLM4CHR3.js  index-BMX67wgt.js  index-BZ4W2Lkm.js  index-B_L1IaMV.css  index-BdB2xXmh.js  index-CJMJ24kf.js  index-CKNmZ9Qg.js  index-CNSPmHE-.js  index-COdqH6Ne.js  index-CgEatMbc.js  index-CiFLHY5y.js  index-CuvEjemL.js  index-CxxryWeA.js  index-D2lozUHd.js  index-DIrrJ_pu.js  index-DWB9KfCX.js  index-De07zzyp.js  index-DjqV-Uwq.js  index-DvkZxaEb.js  index-DvvGfg4w.js  index-UsJW5kez.js  index-cQnXyMhQ.js  index-mQYJGO-2.js  index-xJTa6t4C.js
backend/: Dockerfile  README.md  app.py  bible_search.py  categories.py  convert_nasb.py  elibrary.py  generate_testimony_pdf.py  models.py  nixpacks.toml  pipeline.py  process_testimonies.py  pyproject.toml  rag_search.py  search.py  sermon_taxonomy_full_paths.txt  system_prompts.py  testimonies.jsonl  testimonies_en.jsonl  testimonies_zh.jsonl  testimony_search.py
backend/classification/: en.default.status.json  en.gemma31b.labels copy.jsonl  en.gemma31b.labels.jsonl  en.gemma31b.status.json  zh.default.status.json  zh.gemma31b.labels.jsonl  zh.gemma31b.status.json
backend/scripts/: process_data.py
bible_search/: api.py  search.py
docs/ideas/: hymn-companion.md  live-translator.md  memory-garden.md  sabbath-notes.md  (+1 more)
frontend/: README.md  index.html  package.json  tsconfig.app.json  vercel.json  vite.config.ts
(+39 files in other folders)
